--- a/package.json
+++ b/package.json
@@ -112,10 +112,14 @@
   },
   "codegenConfig": {
     "name": "TypeRichTextInputViewSpec",
-    "type": "all",
+    "type": "components",
     "jsSrcsDir": "src",
+    "outputDir": {
+      "ios": "ios/generated",
+      "android": "android/generated"
+    },
     "android": {
-      "javaPackageName": "com.typerichtextinput"
+      "javaPackageName": "com.typerich"
     },
     "ios": {
       "componentProvider": {
