--- a/android/src/main/new_arch/CMakeLists.txt
+++ b/android/src/main/new_arch/CMakeLists.txt
@@ -1,20 +1,35 @@
 cmake_minimum_required(VERSION 3.13)
 set(CMAKE_VERBOSE_MAKEFILE on)
 
-set(LIB_LITERAL TypeRichTextInputViewSpec)
-set(LIB_TARGET_NAME react_codegen_${LIB_LITERAL})
+# The JS spec name → codegen outputs react_codegen_<name>
+set(LIB_SPEC_LITERAL TypeRichTextInputViewSpec)
 
+# Your actual custom C++ folder name
+set(LIB_CUSTOM_LITERAL TypeRichTextInputView)
+
+set(LIB_TARGET_NAME react_codegen_${LIB_SPEC_LITERAL})
+
+# Directories
 set(LIB_ANDROID_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
-set(LIB_ANDROID_GENERATED_JNI_DIR ${LIB_ANDROID_DIR}/generated/jni)
-set(LIB_ANDROID_GENERATED_COMPONENTS_DIR ${LIB_ANDROID_GENERATED_JNI_DIR}/react/renderer/components/${LIB_LITERAL})
+set(LIB_ANDROID_GENERATED_JNI_DIR ${LIB_ANDROID_DIR}/generated/android/app/build/generated/source/codegen/jni)
+set(LIB_ANDROID_GENERATED_COMPONENTS_DIR ${LIB_ANDROID_GENERATED_JNI_DIR}/react/renderer/components/${LIB_SPEC_LITERAL})
 
-file(GLOB LIB_MODULE_SRCS CONFIGURE_DEPENDS *.cpp react/renderer/components/${LIB_LITERAL}/*.cpp)
-file(GLOB LIB_CODEGEN_SRCS CONFIGURE_DEPENDS ${LIB_ANDROID_GENERATED_COMPONENTS_DIR}/*.cpp)
+set(LIB_CUSTOM_DIR ${CMAKE_CURRENT_SOURCE_DIR}/react/renderer/components/${LIB_CUSTOM_LITERAL})
+
+# Custom handwritten C++ code
+file(GLOB LIB_CUSTOM_SRCS CONFIGURE_DEPENDS
+    ${LIB_CUSTOM_DIR}/*.cpp
+)
+
+# Codegen generated files
+file(GLOB LIB_CODEGEN_SRCS CONFIGURE_DEPENDS
+    ${LIB_ANDROID_GENERATED_COMPONENTS_DIR}/*.cpp
+)
 
 add_library(
         ${LIB_TARGET_NAME}
         SHARED
-        ${LIB_MODULE_SRCS}
+        ${CMAKE_CURRENT_SOURCE_DIR}/TypeRichTextInputViewSpec.cpp
         ${LIB_CUSTOM_SRCS}
         ${LIB_CODEGEN_SRCS}
 )
@@ -23,10 +38,9 @@ target_include_directories(
         ${LIB_TARGET_NAME}
         PUBLIC
         .
-        ./react/renderer/components/${LIB_LITERAL}
+        ${LIB_CUSTOM_DIR}
         ${LIB_ANDROID_GENERATED_JNI_DIR}
         ${LIB_ANDROID_GENERATED_COMPONENTS_DIR}
-        ${LIB_CPP_DIR}
 )
 
 find_package(fbjni REQUIRED CONFIG)
@@ -45,11 +59,9 @@ else()
   target_compile_options(
           ${LIB_TARGET_NAME}
           PRIVATE
-          -DLOG_TAG=\"ReactNative\"
           -fexceptions
           -frtti
           -Wall
-          -std=c++20
   )
 endif()
 
