--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "verbatimModuleSyntax": true
   }
 }
