fix: Add includesGeneratedCode property to ship codegen artifacts in build

--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
       "componentProvider": {
         "TypeRichTextInputView": "TypeRichTextInputView"
       }
-    }
+    },
+    "includesGeneratedCode": true
   },
   "prettier": {
     "quoteProps": "consistent",
