--- a/android/build.gradle
+++ b/android/build.gradle
@@ -75,3 +75,8 @@ dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
+react {
+  libraryName = "TypeRichTextInputView"
+  codegenJavaPackageName = "com.typerich"
+}
