--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,8 +25,25 @@ def getExtOrIntegerDefault(name) {
   return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["TypeRichTextInput_" + name]).toInteger()
 }
 
+def supportsNamespace() {
+  def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
+  def major = parsed[0].toInteger()
+  def minor = parsed[1].toInteger()
+
+  // Namespace support was added in 7.3.0
+  return (major == 7 && minor >= 3) || major >= 8
+}
+
 android {
-  namespace "com.typerich"
+  if (supportsNamespace()) {
+    namespace "com.typerich"
+
+    sourceSets {
+      main {
+        manifest.srcFile "src/main/AndroidManifestNew.xml"
+      }
+    }
+  }
 
   compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
@@ -77,6 +94,6 @@ dependencies {
 }
 
 react {
-  libraryName = "TypeRichTextInputView"
-  codegenJavaPackageName = "com.typerich"
+  jsRootDir = file("../src/")
+  codegenDir= file("..")
 }
