--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
 plugins { id("com.facebook.react.settings") }
-extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 rootProject.name = 'typerichtextinput.example'
+includeBuild("..")  
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
