--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -17,21 +17,19 @@ if linkage != nil
 end
 
 target 'TypeRichTextInputExample' do
-  config = use_native_modules!
+  use_native_modules!
 
   use_react_native!(
-    :path => config[:reactNativePath],
-    # An absolute path to your application root.
+    :path => "../node_modules/react-native",
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
-      config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      "../node_modules/react-native",
+      :mac_catalyst_enabled => false
     )
   end
 end
+
