chore: cmakelists to include cpp 20 to compile

--- a/android/src/main/new_arch/CMakeLists.txt
+++ b/android/src/main/new_arch/CMakeLists.txt
@@ -34,6 +34,14 @@ add_library(
         ${LIB_CODEGEN_SRCS}
 )
 
+set_target_properties(
+        ${LIB_TARGET_NAME}
+        PROPERTIES
+        CXX_STANDARD 20
+        CXX_STANDARD_REQUIRED YES
+        CXX_EXTENSIONS NO
+)
+
 target_include_directories(
         ${LIB_TARGET_NAME}
         PUBLIC
@@ -67,7 +75,7 @@ else()
 endif()
 
 target_include_directories(
-        ${CMAKE_PROJECT_NAME}
+        ${LIB_TARGET_NAME}
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
