--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-typerich",
-  "version": "2.2.0",
-  "description": "Textinput replacement",
+  "version": "2.2.1",
+  "description": "Drop in TextInput replacement with inbuilt support for Image Pasting and Gboard stickers",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
   "exports": {
